tests/NormalTests/paczka1/small_fuzzy/83471628.err
Error in line 2: Zfii S944 68,2
Error in line 1: ohiPo1ua S944 14,8
Error in line 9: JxhAOwcz S944 96,2
